--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,14 @@ greenlet==3.2.1
     # via sqlalchemy
 idna==3.10
     # via anyio
+mysql-connector-python==9.3.0
 pydantic==2.11.4
     # via
     #   -r requirements.in
     #   fastapi
 pydantic-core==2.33.2
     # via pydantic
+python-dotenv==1.0.0
 sniffio==1.3.1
     # via anyio
 sqlalchemy==2.0.40
@@ -38,4 +40,4 @@ typing-extensions==4.13.2
     #   typing-inspection
 typing-inspection==0.4.0
     # via pydantic
-uvicorn
+uvicorn==0.34.2
